# vitr

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
accounts/: admin.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
activities/: models.py  signals.py
activities/tests/: test_models.py
core/: permissions.py  urls.py
core/settings/: base.py
core/tests/: test_permissions.py
quizzes/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_alter_takenquiz_correct_answers_and_more.py
quizzes/tests/: test_models.py  test_serializers.py  test_signals.py  test_views.py
static/css/: admin_custom.css
